@@ -1,3 +1,9 @@
+2010-03-02  Marc-André Lureau  <mlureau@flumotion.com>
+
+	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py:
+	Count the keyframe buffer duration in the current fragment,
+	instead of the one in the next fragment.
+
 2010-03-01  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	* flumotion/component/consumers/applestreamer/resources.py:
